// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OIbCheckBox check CheckBox with value(=false) 1`] = `
<div>
  <div
    class="form-check"
  >
    <label
      class="form-check-label"
    >
      <input
        class="oi-form-input form-check-input"
        id="name"
        name="name"
        type="checkbox"
      />
      label
    </label>
  </div>
</div>
`;

exports[`OIbCheckBox check CheckBox with value(=true) 1`] = `
<div>
  <div
    class="form-check"
  >
    <label
      class="form-check-label"
    >
      <input
        checked=""
        class="oi-form-input form-check-input"
        id="name"
        name="name"
        type="checkbox"
      />
      label
    </label>
  </div>
</div>
`;

exports[`OIbCheckBox check CheckBox with value(=true) and switch mode 1`] = `
<div>
  <div
    class="form-group"
  >
    <div
      class="custom-switch custom-control"
    >
      <input
        checked=""
        class="custom-control-input"
        color="secondary"
        id="name"
        name="name"
        type="checkbox"
      />
      <label
        class="custom-control-label"
        for="name"
      >
        label
      </label>
    </div>
  </div>
</div>
`;
